GoNoGo/force-app/main/default/objects/Go_No_Go_Answer_Item__c/fields/Go_No_Go_Answer__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Answer__c</fullName>
    <description>Master-Detail relation with Go/No-Go Submission.</description>
    <label>Go/No-Go Submission</label>
    <referenceTo>Go_No_Go_Answer__c</referenceTo>
    <relationshipLabel>Go/No-Go Question &amp; Answer Values</relationshipLabel>
    <relationshipName>Go_No_Go_Answer_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>