GoNoGo/force-app/main/default/objects/Go_No_Go_Answer_Item__c/fields/Go_No_Go_Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Go_No_Go_Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Go/No-Go Question Bank for actual question.</description>
    <label>Go/No-Go Question</label>
    <referenceTo>Go_No_Go_Question_Bank__c</referenceTo>
    <relationshipLabel>Go/No-Go Question &amp; Answer Values</relationshipLabel>
    <relationshipName>Go_No_Go_Answer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>