GoNoGo/force-app/main/default/objects/Go_No_Go_Answer_Item__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>Go_No_Go_Question_Bank_Scoring__r.Score__c</formula>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>